--- a/packages/elvis/src/components/form/checkbox.scss
+++ b/packages/elvis/src/components/form/checkbox.scss
@@ -12,9 +12,9 @@ $checkbox-mark-border: 1px solid colors.color('elvia-off');
 
 .e-checkbox {
   display: flex;
-  align-items: center;
   width: fit-content;
   box-sizing: border-box;
+  align-items: center;
   cursor: pointer;
   text-align: left;
 
@@ -22,41 +22,40 @@ $checkbox-mark-border: 1px solid colors.color('elvia-off');
   @media screen and (-ms-high-contrast: none) {
     width: 100%;
   }
+
   &:not(:last-child) {
     margin-bottom: 12px;
   }
 
   &__mark {
     display: inline-flex;
-    align-self: flex-start;
-
     min-width: $checkbox-mark-size;
-    min-height: $checkbox-mark-size;
     max-width: $checkbox-mark-size;
+    min-height: $checkbox-mark-size;
     max-height: $checkbox-mark-size;
-    transition: background 0.2s animation.$transition-cubic;
+    align-self: flex-start;
     border: $checkbox-mark-border;
     border-radius: $checkbox-mark-border-radius;
     background: colors.color('elvia-on');
+    transition: background 0.2s animation.$transition-cubic;
   }
 
   &__label {
-    margin-left: 8px;
     width: fit-content;
-
+    margin-left: 8px;
+    color: colors.color('font-color');
     font-family: 'Red Hat Text', Verdana, sans-serif;
     font-size: 16px;
-    line-height: 24px;
     font-weight: 400;
-    color: colors.color('font-color');
+    line-height: 24px;
   }
 
   &.e-checkbox--compact,
   &.e-checkbox--sm {
     .e-checkbox__mark {
       min-width: $checkbox-mark-compact-size;
-      min-height: $checkbox-mark-compact-size;
       max-width: $checkbox-mark-compact-size;
+      min-height: $checkbox-mark-compact-size;
       max-height: $checkbox-mark-compact-size;
     }
 
@@ -67,11 +66,11 @@ $checkbox-mark-border: 1px solid colors.color('elvia-off');
     }
 
     input {
-      opacity: 0;
       position: absolute;
       z-index: -1;
       width: $checkbox-mark-compact-size;
       height: $checkbox-mark-compact-size;
+      opacity: 0;
 
       &:checked ~ .e-checkbox__mark {
         @extend %checkbox-mark-compact;
@@ -82,8 +81,8 @@ $checkbox-mark-border: 1px solid colors.color('elvia-off');
         background-color: colors.color('disabled-light');
         cursor: not-allowed;
 
-        &:after,
-        &:before {
+        &::after,
+        &::before {
           background-color: colors.color('disabled');
         }
       }
@@ -94,24 +93,25 @@ $checkbox-mark-border: 1px solid colors.color('elvia-off');
     .e-checkbox__mark {
       position: relative;
       background: colors.color('elvia-charge');
+
       &::before {
-        content: '';
         position: absolute;
         top: calc(50% - 1px);
         left: calc(50% - 6px);
         width: 12px;
         height: 2px;
         border-radius: 1px;
-        background: black;
+        background: colors.color('elvia-off');
+        content: '';
       }
     }
 
     &.e-checkbox--compact,
     &.e-checkbox--sm {
       .e-checkbox__mark::before {
+        top: calc(50%);
         left: calc(50% - 4px);
         width: 8px;
-        top: calc(50%);
         height: 1px;
       }
     }
@@ -121,7 +121,7 @@ $checkbox-mark-border: 1px solid colors.color('elvia-off');
   &.e-checkbox---checked &__mark {
     @extend %checkbox-mark;
   }
-  // extends correct checkbox mark on compact checkboxes in pseudoclass
+  // extends correct checkbox mark on compact checkboxes in pseudo class
   &.e-checkbox--compact[class$='e-checkbox---checked'] &__mark,
   &.e-checkbox--sm[class$='e-checkbox---checked'] &__mark {
     @extend %checkbox-mark-compact;
@@ -136,8 +136,8 @@ $checkbox-mark-border: 1px solid colors.color('elvia-off');
   &:active,
   &.e-checkbox---hover:not(:disabled):not(:invalid) {
     .e-checkbox__mark {
-      background-color: colors.color('elvia-charge');
       border-color: colors.color('elvia-off');
+      background-color: colors.color('elvia-charge');
     }
   }
 
@@ -147,10 +147,12 @@ $checkbox-mark-border: 1px solid colors.color('elvia-off');
       background-color: colors.color('disabled-light');
       cursor: not-allowed;
     }
+
     .e-checkbox__label {
       cursor: not-allowed;
     }
   }
+
   &.e-checkbox---disabled-checked {
     .e-checkbox__mark {
       @extend %checkbox-mark;
@@ -158,17 +160,18 @@ $checkbox-mark-border: 1px solid colors.color('elvia-off');
       background-color: colors.color('disabled-light') !important;
       cursor: not-allowed;
 
-      &:after,
-      &:before {
+      &::after,
+      &::before {
         background-color: colors.color('disabled') !important;
       }
     }
+
     .e-checkbox__label {
       color: colors.color('grey-70');
       cursor: not-allowed;
     }
   }
-  // extends correct checkbox mark on compact checkboxes in pseudoclass
+  // extends correct checkbox mark on compact checkboxes in pseudo class
   &.e-checkbox--compact[class$='disabled-checked'] &__mark,
   &.e-checkbox--sm[class$='disabled-checked'] &__mark {
     @extend %checkbox-mark-compact;
@@ -182,13 +185,20 @@ $checkbox-mark-border: 1px solid colors.color('elvia-off');
 
   // hides initial checkbox and gives placeholder style according to state
   input {
-    opacity: 0;
     position: absolute;
     z-index: -1;
     width: $checkbox-mark-size;
     height: $checkbox-mark-size;
-    margin: 0;
     border-radius: 50%;
+    margin: 0;
+    opacity: 0;
+
+    @include helpers.hover() {
+      &:hover:not(:disabled):not(:invalid) ~ .e-checkbox__mark {
+        border-color: colors.color('elvia-off');
+        background-color: colors.color('elvia-charge');
+      }
+    }
 
     &:checked ~ .e-checkbox__mark {
       @extend %checkbox-mark;
@@ -199,18 +209,12 @@ $checkbox-mark-border: 1px solid colors.color('elvia-off');
       @include outline.e-outline();
     }
 
-    @include helpers.hover() {
-      &:hover:not(:disabled):not(:invalid) ~ .e-checkbox__mark {
-        background-color: colors.color('elvia-charge');
-        border-color: colors.color('elvia-off');
-      }
-    }
-
     &:disabled ~ .e-checkbox__mark {
       border-color: colors.color('disabled');
       background-color: colors.color('disabled-light');
       cursor: not-allowed;
     }
+
     &:disabled ~ .e-checkbox__label {
       color: colors.color('grey-70');
     }
@@ -220,11 +224,12 @@ $checkbox-mark-border: 1px solid colors.color('elvia-off');
       background-color: colors.color('disabled-light');
       cursor: not-allowed;
 
-      &:after,
-      &:before {
+      &::after,
+      &::before {
         background-color: colors.color('disabled');
       }
     }
+
     &:disabled ~ .e-checkbox__label {
       color: colors.color('grey-70');
       cursor: not-allowed;
@@ -243,37 +248,31 @@ $checkbox-mark-border: 1px solid colors.color('elvia-off');
     background-color: colors.color('elvia-charge');
 
     &::before {
-      content: '';
+      @include helpers.transform(translateX(10px) rotate(-45deg));
+      @include helpers.transform-origin(left bottom);
       position: absolute;
       top: 12px;
       left: -2px;
-      height: 30%;
       width: 2px;
-      background-color: colors.color('elvia-off');
+      height: 30%;
       border-radius: 15px;
-      @include helpers.transform(translateX(10px) rotate(-45deg));
-      @include helpers.transform-origin(left bottom);
-      -o-animation: checkmarkHeight 150ms;
-      -moz-animation: checkmarkHeight 150ms;
-      -webkit-animation: checkmarkHeight 150ms;
       animation: checkmarkHeight 150ms;
+      background-color: colors.color('elvia-off');
+      content: '';
     }
 
     &::after {
-      content: '';
+      @include helpers.transform(translateX(10px) rotate(-55deg));
+      @include helpers.transform-origin(left bottom);
       position: absolute;
       bottom: 3px;
       left: -1px;
-      height: 2px;
       width: 0%;
-      background-color: colors.color('elvia-off');
+      height: 2px;
       border-radius: 15px;
-      @include helpers.transform(translateX(10px) rotate(-55deg));
-      @include helpers.transform-origin(left bottom);
-      -o-animation: checkmarkWidth 150ms 150ms forwards;
-      -moz-animation: checkmarkWidth 150ms 150ms forwards;
-      -webkit-animation: checkmarkWidth 150ms 150ms forwards;
       animation: checkmarkWidth 150ms 150ms forwards;
+      background-color: colors.color('elvia-off');
+      content: '';
     }
   }
 
@@ -282,37 +281,31 @@ $checkbox-mark-border: 1px solid colors.color('elvia-off');
     background-color: colors.color('elvia-charge');
 
     &::before {
-      content: '';
+      @include helpers.transform(translateX(10px) rotate(-45deg));
+      @include helpers.transform-origin(left bottom);
       position: absolute;
       top: 50%;
       left: -28%;
-      height: 39%;
       width: 1px;
-      background-color: colors.color('elvia-off');
+      height: 39%;
       border-radius: 15px;
-      @include helpers.transform(translateX(10px) rotate(-45deg));
-      @include helpers.transform-origin(left bottom);
-      -o-animation: checkmarkHeightCompact 150ms;
-      -moz-animation: checkmarkHeightCompact 150ms;
-      -webkit-animation: checkmarkHeightCompact 150ms;
       animation: checkmarkHeightCompact 150ms;
+      background-color: colors.color('elvia-off');
+      content: '';
     }
 
     &::after {
-      content: '';
+      @include helpers.transform(translateX(10px) rotate(-55deg));
+      @include helpers.transform-origin(left bottom);
       position: absolute;
       bottom: 15%;
       left: -28%;
-      height: 1px;
       width: 0%;
-      background-color: colors.color('elvia-off');
+      height: 1px;
       border-radius: 15px;
-      @include helpers.transform(translateX(10px) rotate(-55deg));
-      @include helpers.transform-origin(left bottom);
-      -o-animation: checkmarkWidthCompact 150ms 150ms forwards;
-      -moz-animation: checkmarkWidthCompact 150ms 150ms forwards;
-      -webkit-animation: checkmarkWidthCompact 150ms 150ms forwards;
       animation: checkmarkWidthCompact 150ms 150ms forwards;
+      background-color: colors.color('elvia-off');
+      content: '';
     }
   }
 }
