--- a/packages/elvis/src/components/form/drag-drop-area.scss
+++ b/packages/elvis/src/components/form/drag-drop-area.scss
@@ -1,11 +1,10 @@
 @use '../../variables/colors';
 
 .e-dragdrop {
+  display: grid;
+  place-items: center;
   border: 2px dashed colors.color('grey-20');
   border-radius: 8px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
 
   &--dragover {
     border-color: colors.color('elvia-charge');
