--- a/packages/elvis/src/variables/typography.scss
+++ b/packages/elvis/src/variables/typography.scss
@@ -46,7 +46,7 @@ $font-family-secondary: 'Red Hat Text', Verdana, sans-serif;
 
 body {
   font-family: $font-family;
-  color: #000;
+  color: var(--e-color-text-primary, #000);
 }
 
 $typography: TypographyMap.$typography;
