--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.html
@@ -4,8 +4,8 @@
     <!--Test the component here (delete what was here previously). When done add it to the list alphabetically-->
     <h3>Test your component here</h3>
     <!--Normal version-->
-    <div class="e-bg-white">
-      <div class="e-p-16 e-theme-dark" [style]="{ background: '#1F1F1F' }">
+    <div>
+      <div class="e-p-16 e-theme-dark">
         <elvia-datepicker (valueOnChange)="writeDate($event.detail.value)"></elvia-datepicker>
       </div>
       <div class="e-p-16">
