--- a/packages/elvis/percy/components/radiobutton.html
+++ b/packages/elvis/percy/components/radiobutton.html
@@ -67,5 +67,14 @@
         <span class="e-radio__label">Invalid</span>
       </label>
     </form>
+
+    <div class="e-title-xs e-my-16">Edge case</div>
+    <form class="e-form_field" style="max-width: 100px">
+      <label class="e-radio" for="ex1_1">
+        <input type="radio" id="ex1_1" name="example1_1" value="value1" checked />
+        <span class="e-radio__mark"></span>
+        <span class="e-radio__label">Lang Radiobutton label</span>
+      </label>
+    </form>
   </body>
 </html>
