--- a/packages/elvis/src/components/form/radiobutton.scss
+++ b/packages/elvis/src/components/form/radiobutton.scss
@@ -11,17 +11,29 @@ $form-radiobutton-mark-border: 1px solid colors.color('elvia-off');
 .e-radio {
   // Variable containing '&' to jump to current parent inside a child class.
   $this: &;
-  display: flex;
-  align-items: center;
-  box-sizing: border-box;
-  width: fit-content;
   position: relative;
-  cursor: pointer;
-
-  @include typography.typography('text-option');
+  display: flex;
+  width: fit-content;
+  box-sizing: border-box;
+  align-items: center;
   color: colors.color('font-color');
+  cursor: pointer;
+  font-family: 'Red Hat Text', Verdana, sans-serif;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
   line-height: 24px;
   text-align: left;
+
+  @include helpers.keyframes(fadeIn) {
+    0% {
+      opacity: 0;
+    }
+
+    100% {
+      opacity: 1;
+    }
+  }
 
   &:not(:last-child) {
     margin-bottom: 8px;
@@ -33,15 +45,16 @@ $form-radiobutton-mark-border: 1px solid colors.color('elvia-off');
     color: colors.color('font-color');
 
     &:not(:last-child) {
-      margin-bottom: 0px;
+      margin-bottom: 0;
     }
+
     input {
-      opacity: 0;
-      outline: none;
       position: absolute;
+      z-index: -1;
       width: $form-radiobutton-compact-mark-size;
       height: $form-radiobutton-compact-mark-size;
-      z-index: -1;
+      opacity: 0;
+      outline: none;
 
       // states styles for input
       &:checked ~ #{$this}__mark {
@@ -72,8 +85,8 @@ $form-radiobutton-mark-border: 1px solid colors.color('elvia-off');
         background: colors.color('disabled-light');
         cursor: not-allowed;
 
-        &:before,
-        &:after {
+        &::before,
+        &::after {
           background-color: colors.color('grey-40');
         }
       }
@@ -84,9 +97,9 @@ $form-radiobutton-mark-border: 1px solid colors.color('elvia-off');
     }
 
     .e-radio__mark {
+      top: 3px;
       width: $form-radiobutton-compact-mark-size;
       height: $form-radiobutton-compact-mark-size;
-      top: 3px;
     }
 
     .e-radio__label {
@@ -100,14 +113,14 @@ $form-radiobutton-mark-border: 1px solid colors.color('elvia-off');
 
   // Hide default radiostyle and put in placeholder style
   input {
-    opacity: 0;
-    outline: none;
     position: absolute;
     z-index: -1;
-    margin: 0;
     width: $form-radiobutton-mark-size;
     height: $form-radiobutton-mark-size;
     border-radius: 50%;
+    margin: 0;
+    opacity: 0;
+    outline: none;
 
     // states styles for input
     &:checked ~ #{$this}__mark {
@@ -138,8 +151,8 @@ $form-radiobutton-mark-border: 1px solid colors.color('elvia-off');
       background: colors.color('disabled-light');
       cursor: not-allowed;
 
-      &:before,
-      &:after {
+      &::before,
+      &::after {
         background-color: colors.color('grey-40');
       }
     }
@@ -149,44 +162,32 @@ $form-radiobutton-mark-border: 1px solid colors.color('elvia-off');
     }
   }
   // Creating placeholder to inject style into radiobutton mutations.
-  %radiobutton-mark {
+  %radiobutton-mark,
+  %radiobutton-mark--compact {
+    display: grid;
     background-color: colors.color('elvia-charge');
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    &:before {
-      content: '';
-      height: 12px;
-      width: 12px;
-      background-color: colors.color('elvia-off');
-      border-radius: 50%;
-      opacity: 1;
+    place-items: center;
+
+    &::before {
       @include helpers.animation(fadeIn, 250ms, linear, both);
+      border-radius: 50%;
+      background-color: colors.color('elvia-off');
+      content: '';
+      opacity: 1;
+    }
+  }
+
+  %radiobutton-mark {
+    &::before {
+      width: 12px;
+      height: 12px;
     }
   }
 
   %radiobutton-mark--compact {
-    background-color: colors.color('elvia-charge');
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    &:before {
-      content: '';
-      height: 8px;
+    &::before {
       width: 8px;
-      background-color: colors.color('elvia-off');
-      border-radius: 50%;
-      opacity: 1;
-      @include helpers.animation(fadeIn, 250ms, linear, both);
-    }
-  }
-
-  @include helpers.keyframes(fadeIn) {
-    0% {
-      opacity: 0;
-    }
-    100% {
-      opacity: 1;
+      height: 8px;
     }
   }
 
@@ -218,6 +219,7 @@ $form-radiobutton-mark-border: 1px solid colors.color('elvia-off');
       background: colors.color('disabled-light');
       cursor: not-allowed;
     }
+
     .e-radio__label {
       color: colors.color('grey-70');
       cursor: not-allowed;
@@ -231,11 +233,12 @@ $form-radiobutton-mark-border: 1px solid colors.color('elvia-off');
       background: colors.color('disabled-light') !important;
       cursor: not-allowed;
 
-      &:before,
-      &:after {
+      &::before,
+      &::after {
         background-color: colors.color('grey-40') !important;
       }
     }
+
     .e-radio__label {
       color: colors.color('grey-70');
       cursor: not-allowed;
@@ -268,7 +271,7 @@ $form-radiobutton-mark-border: 1px solid colors.color('elvia-off');
 
   &__mark {
     position: absolute;
-    top: 0px;
+    top: 0;
   }
 
   &__label {
