--- a/packages/elvis/src/components/form/field.scss
+++ b/packages/elvis/src/components/form/field.scss
@@ -5,16 +5,15 @@
 .e-form-field {
   // Variable containing '&' to jump to current parent inside a child class.
   $this: &;
-
-  display: block;
   position: relative;
-  text-align: left;
+  display: block;
   box-sizing: border-box;
+  text-align: left;
 
   &__label {
+    @include typography.typography('text-medium-strong');
     display: block;
     margin-bottom: 5px;
-    @include typography.typography('text-label');
     color: colors.color('font-color');
     text-align: left;
 
@@ -25,12 +24,12 @@
   }
 
   &__error {
-    visibility: hidden;
+    @include typography.typography('text-sm');
     display: flex;
     align-items: center;
     margin-top: 8px;
-    @include typography.typography('text-sm');
     color: colors.color('font-color');
+    visibility: hidden;
 
     &.e-form-field__error--visible {
       visibility: visible;
@@ -45,6 +44,7 @@
 
   &__nested {
     margin-left: 24px;
+
     &.e-form-field__nested--sm {
       margin-left: 16px;
     }
@@ -53,18 +53,22 @@
   &.e-form-field--combined {
     width: 100%;
     margin-bottom: 0;
+
     .e-form-field__input {
       display: flex;
+      width: 100%;
+      max-width: 448px;
       flex-direction: row;
       align-items: baseline;
-      max-width: 448px;
-      width: 100%;
+
       .e-input:not(:last-of-type) {
         margin-right: 8px;
       }
+
       .e-input--small {
         width: 80px;
       }
+
       .e-input--medium {
         width: 150px;
       }
@@ -74,20 +78,22 @@
   &.e-form-field--compact {
     position: relative;
     padding-top: 8px;
+
     .e-form-field__label {
       position: absolute;
       z-index: 1;
       top: 0;
       left: 8px;
-      background-color: colors.color('elvia-on');
-      padding: 0 3px;
       height: 11px;
+      padding: 0 3px;
+      background-color: colors.color('elvia-on');
 
       font-family: 'Red Hat Text', Verdana, sans-serif;
-      font-weight: 500;
       font-size: 10px;
+      font-weight: 500;
       line-height: 100%;
     }
+
     .e-form-field__error {
       margin-top: 4px;
       font-family: 'Red Hat Text', Verdana, sans-serif;
@@ -120,9 +126,9 @@
 
 .e-inlined-field {
   display: flex;
-  flex-direction: row;
-  max-width: 448px;
   width: 100%;
+  max-width: 448px;
+  flex-direction: row;
 
   .e-form-field {
     width: 100%;
@@ -135,16 +141,18 @@
     &:not(:last-of-type) {
       margin-right: 8px;
     }
+
     &.e-form-field--small {
       width: 60px;
     }
+
     &.e-form-field--medium {
       width: 140px;
     }
 
     &.e-form-field--full-width {
-      max-width: unset;
       width: 100%;
+      max-width: unset;
     }
   }
 
