--- a/packages/elvis/src/components/form/input.scss
+++ b/packages/elvis/src/components/form/input.scss
@@ -180,7 +180,8 @@ $form-input-padding-compact-active: 3px 9px;
   input[type='search']::-webkit-search-cancel-button,
   input[type='search']::-webkit-search-results-button,
   input[type='search']::-webkit-search-results-decoration {
-    appearance: none;
+    /* stylelint-disable-line */
+    -webkit-appearance: none;
   }
 }
 
