fix page and component hightlighting reset

--- a/packages/web/src/app/shared/component-documentation/component-changelog/component-changelog.component.html
+++ b/packages/web/src/app/shared/component-documentation/component-changelog/component-changelog.component.html
@@ -64,8 +64,10 @@
                 <ng-container
                   *ngFor="let component of changelog.components; let last = last; let first = first"
                 >
-                  <span *ngIf="!last && !first">,</span>
-                  <span *ngIf="last && !first">&</span>
+                  <!-- prettier-ignore -->
+                  <span *ngIf="!last && !first">, </span>
+                  <!-- prettier-ignore -->
+                  <span *ngIf="last && !first"> & </span>
                   <a
                     class="e-link e-link--inline"
                     [href]="component.url"
@@ -79,8 +81,10 @@
               <div *ngIf="changelog.pages && changelog.pages.length > 0">
                 Pages:
                 <ng-container *ngFor="let component of changelog.pages; let last = last; let first = first">
-                  <span *ngIf="!last && !first">,&nbsp</span>
-                  <span *ngIf="last && !first">&</span>
+                  <!-- prettier-ignore -->
+                  <span *ngIf="!last && !first">, </span>
+                  <!-- prettier-ignore -->
+                  <span *ngIf="last && !first"> & </span>
                   <a
                     class="e-link e-link--inline"
                     [href]="component.url"
