deprecate Position Picker

--- a/packages/elvis/src/components/form/position-picker.scss
+++ b/packages/elvis/src/components/form/position-picker.scss
@@ -1,6 +1,7 @@
 @use '../../variables/typography.scss';
 @use '../../variables/colors';
 
+//DEPRECATED
 .e-position-picker {
   display: flex;
   flex-wrap: wrap;
