--- a/packages/web/src/app/shared/component-documentation/component-changelog/component-changelog.component.scss
+++ b/packages/web/src/app/shared/component-documentation/component-changelog/component-changelog.component.scss
@@ -29,13 +29,9 @@
   align-items: center;
   gap: 16px;
   padding: 32px;
-
   width: 100%;
-  & img {
+
+  img {
     width: 75px;
-  }
-  & span {
-    text-align: center;
-    margin: 0 16px;
   }
 }
