--- a/packages/web/src/app/shared/component-documentation/component-changelog/component-changelog.component.html
+++ b/packages/web/src/app/shared/component-documentation/component-changelog/component-changelog.component.html
@@ -144,7 +144,9 @@
     [closeLabel]="'Hide'"
     [labelPosition]="'right'"
     [size]="'small'"
-    [isOpen]="filterIsDirty"
+    [isOpen]="accordionIsOpen"
+    (onOpen)="accordionIsOpen = true"
+    (onClose)="accordionIsOpen = false"
   >
     <div slot="content">
       <ng-container *ngTemplateOutlet="changelogTemplateContent"></ng-container>
