Revert "refactor(shadows): rename $shadowVariables to $shadow-variables"
This reverts commit 8557ffcb240cd1b99a521e437bb3389baaad096a.

--- a/packages/elvis/src/variables/shadows.scss
+++ b/packages/elvis/src/variables/shadows.scss
@@ -6,7 +6,7 @@ $shadows: (
   '8': 0 0 30px rgba(0, 0, 0, 0.08),
 );
 
-$shadow-variables: (
+$shadowVariables: (
   'none': 'none',
   'soft': map.get($shadows, '3'),
   'medium': map.get($shadows, '6'),
