--- a/packages/elvis/src/utilities/shadows.scss
+++ b/packages/elvis/src/utilities/shadows.scss
@@ -2,7 +2,7 @@
 @use 'sass:map';
 @use '../variables/shadows';
 
-@each $label, $value in shadows.$shadow-variables {
+@each $label, $value in shadows.$shadowVariables {
   // Making CSS classes for shadow-variables
   .e {
     &-shadow-#{$label} {
@@ -15,6 +15,6 @@
   }
 }
 
-@function getShadow($name, $shadow-set: shadows.$shadow-variables) {
+@function getShadow($name, $shadow-set: shadows.$shadowVariables) {
   @return map.get($shadow-set, $name);
 }
