Revert "refactor(animations): rename dotAnimation to dot-animation"
This reverts commit c9fbc39a445157cf53aa5ea2faf349d19688395b.

--- a/packages/elvis/src/utilities/animations.scss
+++ b/packages/elvis/src/utilities/animations.scss
@@ -5,22 +5,19 @@
   from {
     @include helpers.transform(rotate(0deg));
   }
-
   to {
     @include helpers.transform(rotate(360deg));
   }
 }
 
-@mixin dot-animation($name, $color) {
+@mixin dotAnimation($name, $color) {
   @include helpers.keyframes($name) {
     0% {
       background: transparent;
     }
-
     50% {
       background: $color;
     }
-
     100% {
       background: transparent;
     }
