Revert "refactor(elvis): rename getShadow to get-shadow"
This reverts commit 70b173107119bccb8411bf5d82c88c89be717137.

--- a/packages/elvis/src/components/autocomplete.scss
+++ b/packages/elvis/src/components/autocomplete.scss
@@ -17,7 +17,7 @@ $autocomplete-padding-item-compact: 6px 10px;
   border-radius: 4px;
   margin-top: 4px;
   background-color: colors.color('elvia-on');
-  box-shadow: shadows.get-shadow('medium');
+  box-shadow: shadows.getShadow('medium');
   overflow-y: auto;
   text-align: left;
 
