--- a/packages/elvis/src/components/alert.scss
+++ b/packages/elvis/src/components/alert.scss
@@ -314,7 +314,7 @@ $toast-max-width: 400px;
     padding: $toast-padding;
     border-color: colors.color('elvia-charge');
     border-radius: 8px;
-    box-shadow: shadows.get-shadow('medium');
+    box-shadow: shadows.getShadow('medium');
 
     .e-alert__icon {
       width: 24px;
