make properties search normal size

--- a/packages/web/src/app/shared/component-documentation/component-properties-table/component-properties-table.component.html
+++ b/packages/web/src/app/shared/component-documentation/component-properties-table/component-properties-table.component.html
@@ -1,5 +1,5 @@
 <div class="properties-container">
-  <div class="e-form-field e-form-field--compact properties-filter">
+  <div class="e-form-field properties-filter">
     <div class="e-search e-search--instant" [ngClass]="{ 'e-search--searched': searchTerm !== '' }">
       <div class="e-input">
         <input
