--- a/packages/web/src/app/shared/component-documentation/component-example/component-example-code/component-example-code.component.html
+++ b/packages/web/src/app/shared/component-documentation/component-example/component-example-code/component-example-code.component.html
@@ -5,6 +5,7 @@
       [isInverted]="true"
       [value]="activeTab"
       [items]="tabs"
+      [tabIdPrefix]="tabIdPrefix"
     ></elvia-tabs>
     <!--Copy code-->
     <div class="copy-code">
