--- a/packages/web/src/app/shared/component-documentation/component-example/component-example-generator/component-example-generator.component.html
+++ b/packages/web/src/app/shared/component-documentation/component-example/component-example-generator/component-example-generator.component.html
@@ -259,6 +259,7 @@
         <app-component-example-code
           [componentData]="componentData"
           [inlineExample]="inlineExample"
+          [tabIdPrefix]="tabIdPrefix"
         ></app-component-example-code>
       </div>
     </elvia-accordion>
