--- a/packages/web/src/app/doc-pages/components/accordion-doc/accordion-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/accordion-doc/accordion-doc.component.html
@@ -51,18 +51,29 @@
   <!--GROUP-->
   <app-component-section [sectionTitle]="'Group'">
     <ng-container ngProjectAs="sectionContent">
-      To create an accordion group, use multiple accordions with
-      <code>isFullWidth=true</code>
-      grouped together, along with dividers and spacing.
+      Accordions can be grouped with titles. This can be used to organize a lot of content and is easy for the
+      user to scan and select what’s relevant. Example of use is as an FAQ section. See the
+      <a [routerLink]="['/patterns/groups']" class="e-link e-link--inline">group documentation page</a>
+      for more information on how to use group patterns.
       <app-component-subsection [sectionTitle]="'Usage'">
         <ng-container ngProjectAs="sectionContent">
-          NB: Keep if there should be separate do's and don'ts for group accordion.
+          <strong>NB:</strong>
+          Keep if there should be separate do's and don'ts for group accordion. Currently the same list.
           <app-when-to-use [whens]="doesGroupAccordion" [whenNots]="dontsGroupAccordion"></app-when-to-use>
         </ng-container>
       </app-component-subsection>
       <app-component-subsection [sectionTitle]="'Implementation'">
         <ng-container ngProjectAs="sectionContent">
-          Here, implementation details for how to create a group accordion will come.
+          To create an accordion group, use multiple accordions with
+          <code>isFullWidth=true</code>
+          grouped together, along with dividers and spacing. If you want only one accordion to be open at a
+          time, you can use the
+          <code>isOpen</code>
+          property along with the
+          <code>onOpen</code>
+          /
+          <code>onClose</code>
+          events to control the state of the accordions.
           <app-component-example-generator
             [componentData]="accordionGroupData"
             [inlineExample]="true"
