--- a/packages/web/src/app/doc-pages/components/accordion-doc/accordion-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/accordion-doc/accordion-doc.component.html
@@ -1,6 +1,6 @@
 <!--HEADER-->
 <app-component-header [figmaUrl]="figmaUrl" [lastUpdated]="componentData.changelog[0].date">
-  <ng-container ngProjectAs="headerTitle">Accordion</ng-container>
+  <ng-container ngProjectAs="headerTitle">{{ title }}</ng-container>
   <ng-container ngProjectAs="headerDescription">
     {{ description }}
   </ng-container>
