change changelog filter flex alignment

--- a/packages/web/src/app/shared/component-documentation/component-changelog/component-changelog.component.scss
+++ b/packages/web/src/app/shared/component-documentation/component-changelog/component-changelog.component.scss
@@ -9,7 +9,7 @@
 
 .changelog-filter {
   display: flex;
-  align-items: flex-start;
+  align-items: center;
   justify-content: space-between;
   flex-direction: row;
   flex-wrap: wrap;
