--- a/packages/web/src/app/shared/component-documentation/component-changelog/component-changelog.component.html
+++ b/packages/web/src/app/shared/component-documentation/component-changelog/component-changelog.component.html
@@ -19,7 +19,7 @@
         <div class="changelog-row py-5" *ngIf="!el.skipped">
           <td class="changelog-date">
             <span class="e-title-sm">{{ el.version }}</span>
-            <span class="changelog-date-span">{{ el.date }}</span>
+            <span class="changelog-date-span">{{ el.date | DocumentationDatePipe }}</span>
           </td>
           <td class="changelog-content" *ngIf="!el.skipped">
             <div class="changelog-section" *ngFor="let changelog of el.changelog">
