--- a/packages/elvis/src/components/form/input.scss
+++ b/packages/elvis/src/components/form/input.scss
@@ -78,6 +78,12 @@ $form-input-padding-compact-active: 3px 9px;
     border: 2px solid colors.color('red');
   }
 
+  input:user-invalid,
+  textarea:user-invalid {
+    padding: $form-input-padding-active;
+    border: 2px solid colors.color('red');
+  }
+
   &.e-input---focus > input,
   &.e-input---focus > textarea {
     @include outline.e-outline-pseudoclass();
@@ -180,8 +186,7 @@ $form-input-padding-compact-active: 3px 9px;
   input[type='search']::-webkit-search-cancel-button,
   input[type='search']::-webkit-search-results-button,
   input[type='search']::-webkit-search-results-decoration {
-    /* stylelint-disable-line */
-    -webkit-appearance: none;
+    -webkit-appearance: none; /* stylelint-disable-line */
   }
 }
 
